--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
     </div>
     <section class="support-section">
       <div class="support-box">
-        <img src="/image/PDO.jpg" alt="support" />
+        <img src="image/PDO.jpg" alt="support" />
         <h3>Professional Support</h3>
         <p>Get in touch with our proffesional therapist</p>
         <button>Contact Us</button>
       </div>
       <div class="support-box">
-        <img src="/image/CP.jpg" alt="Community" />
+        <img src="image/CP.jpg" alt="Community" />
         <h3>Community Interaction</h3>
         <p>Connect with others who are going through similar experiences</p>
         <button>Join Community</button>
@@ -292,7 +292,7 @@
           </p>
         </div>
         <div class="therapist-image">
-          <img src="/image/G.jpg" alt="therapist" />
+          <img src="image/G.jpg" alt="therapist" />
         </div>
         <div class="how-it-works">
           <h3>How it works</h3>
@@ -306,7 +306,7 @@
           </p>
         </div>
         <div>
-          <img src="/image/oncall.jpg" alt="oncall" />
+          <img src="image/oncall.jpg" alt="oncall" />
         </div>
         <div>
           <h3>Therapy when you need it</h3>
